# youtube_video_downloader

./: .env.example  .gitignore  config.py  docker-compose.yaml  main.py  pyproject.toml  utils.py
db/: db.py
services/: sheets.py
video/: 115361  6350819  708873  818468  859190
